Adding documentation and house cleaning
