# api/api/resources/usuario.py
@@ -1,10 +1,9 @@
-from flask import jsonify
 from flask_restful import Resource, reqparse
 from flask_restful_swagger import swagger
 from flask_jwt_extended import create_access_token, jwt_required, get_jwt_identity
-from pydantic import SecretStr
 from api.models.usuario_model import Usuario
 from api.utils.rbac import role_required
+from pydantic import ValidationError
 from werkzeug.security import generate_password_hash, check_password_hash
 from pymongo import MongoClient
 import os
@@ -23,7 +22,6 @@ usuario_parser.add_argument('password', type=str, required=True, help='Password 
 usuario_parser.add_argument('role', type=str, required=False, help='Role is autoset when blank')
 usuario_parser.add_argument('parent_user', type=str, required=False, help='Parent user cannot be blank')
 
-
 class UsuarioAuthResource(Resource):
     @swagger.operation(
         notes='Autentica usuarios',
@@ -38,12 +36,38 @@ class UsuarioAuthResource(Resource):
         access_token = create_access_token(identity=str(usuario['role']))
         return {'access_token': access_token}, 200
 
-  
+class UsuarioAuthSetupResource(Resource):
+    @swagger.operation(
+        notes='Endpoint usado solo para registrar el primer usuario',
+        responseClass=Usuario,
+        nickname='post'
+    )
+    def post(self):
+        if usuarios_collection.count_documents({}) != 0:
+            return {'message': 'Unauthorized'}, 401
+        
+        data = usuario_parser.parse_args()
+        usuario = data['username']
+        password = generate_password_hash(data['password'])            
+        try:
+            primer_usuario = Usuario(
+                username=usuario, 
+                password=password, 
+                role="admin", 
+                fecha_creacion=datetime.datetime.now(), 
+                parent_user="root"
+                )
+            usuarios_collection.insert_one(primer_usuario.model_dump())
+            return {'message': 'Nuevo admin creado con exito'}, 201
+        except ValidationError:
+            return {'message': 'Requisicion malformada'}, 400
+    
+
 class UsuarioResource(Resource):
     @swagger.operation(
-        notes='Get a user by username',
+        notes='Lista usuarios',
         responseClass=Usuario,
-        nickname='getUsuario'
+        nickname='listaUsuario'
     )
     
     @role_required('admin')  
@@ -65,12 +89,12 @@ class UsuarioResource(Resource):
         result = usuarios_collection.delete_one({'username': username})
         if result.deleted_count == 0:
             return {'message': 'User not found'}, 404
-        return '', 204
+        return 'Usuario eliminado', 204
 
     @swagger.operation(
-        notes='Update a user by username',
+        notes='Atualiza un usuario',
         responseClass=Usuario,
-        nickname='put'
+        nickname='putUsuario'
     )
     @role_required('admin')
     def put(self, username):
@@ -90,21 +114,21 @@ class UsuarioResource(Resource):
         return updated_user
 
     @swagger.operation(
-        notes='Create a new user',
+        notes='Crea um nuevo usuario',
         responseClass=Usuario,
-        nickname='post'
+        nickname='postUsuario'
     )
     @role_required('admin')
     def post(self):
         data = usuario_parser.parse_args()
         password_hash = generate_password_hash(data['password'])
-        new_user = {
-            'username': data['username'],
-            'password': password_hash,
-            'role': data['role'],
-            'parent_user': data['parent_user'],
-            'fecha_creacion': datetime.datetime.now()
-        }
-        result = usuarios_collection.insert_one(new_user)
-        new_user['_id'] = str(result.inserted_id)
-        return new_user, 201
+        nuevo_usuario = Usuario(
+                username=data['username'], 
+                password=password_hash,
+                role=data['role'], 
+                fecha_creacion=datetime.datetime.now()
+                )
+        
+        result = usuarios_collection.insert_one(nuevo_usuario.model_dump())
+        nuevo_usuario['_id'] = str(result.inserted_id)
+        return nuevo_usuario, 201
