# api/app.py
@@ -3,11 +3,16 @@ from flask_restful import Api
 from flask_cors import CORS
 from flask_swagger_ui import get_swaggerui_blueprint
 from flask_jwt_extended import JWTManager
-from api.resources.usuario import UsuarioResource, UsuarioAuthResource
+from api.resources.usuario import UsuarioResource, UsuarioAuthResource, UsuarioAuthSetupResource
 from api.resources.proveedor import ProveedorResource
 import os
 
 app = Flask(__name__)
+
+app.config['JWT_SECRET_KEY'] = os.environ.get('JWT_SECRET_KEY')
+app.config['MONGO_URI'] = os.environ.get('MONGO_URI')
+if not app.config['MONGO_URI'] or not app.config['JWT_SECRET_KEY']:
+    raise RuntimeError('Environment variables MONGO_URI or JWT_SECRET_KEY not set, exiting...')
 
 # Swagger UI configuration
 SWAGGER_URL = '/docs'
@@ -32,6 +37,7 @@ def add_security_headers(response):
 # Register Resources
 api.add_resource(UsuarioResource, '/usuarios')
 api.add_resource(UsuarioAuthResource, '/usuarios/auth')
+api.add_resource(UsuarioAuthSetupResource, '/usuarios/registro')
 api.add_resource(ProveedorResource, '/proveedores')
 
 api.app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
